package protobuf;

message SnapshotRecoveryRequest {
	required string  LeaderName=1;
	required uint64  LastIndex=2;
	required uint64  LastTerm=3;   

	message Peer {
		required string Name=1;
		required string ConnectionString=2;
	}  
	repeated Peer  Peers=4;  

	required bytes   State=5;
}