package protobuf;

message SnapshotResponse {
	required bool Success=1;
}